--- a/package.json
+++ b/package.json
@@ -23,19 +23,25 @@
   },
   "homepage": "https://github.com/westfoxtrot/ccd-wesbite#readme",
   "dependencies": {
-    "bulma": "^0.8.0",
-    "gatsby": "^2.19.12",
+    "boxicons": "^2.0.5",
+    "bulma": "^0.9.0",
+    "gatsby": "^2.24.15",
     "gatsby-image": "^2.2.40",
     "gatsby-plugin-manifest": "^2.2.41",
     "gatsby-plugin-react-helmet": "^3.1.22",
     "gatsby-plugin-sass": "^2.1.28",
-    "node-sass": "^4.13.1",
+    "gatsby-plugin-typography": "^2.5.10",
+    "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "typescript": "^3.7.5"
+    "react-typography": "^0.16.19",
+    "typescript": "^3.7.5",
+    "typography": "^0.16.19",
+    "typography-theme-moraga": "^0.16.19"
   },
   "devDependencies": {
+    "@loadable/component": "^5.13.1",
     "@now/node": "^1.4.0",
     "prettier": "^1.19.1"
   }
